первый день закончен

--- a/css/mixins_variable.css
+++ b/css/mixins_variable.css
@@ -1,1 +1,5 @@
-/*# sourceMappingURL=mixins_variable.css.map */
+.__container {
+  max-width: 1270px;
+  padding: 0 15px;
+  margin: 0 auto;
+}/*# sourceMappingURL=mixins_variable.css.map */
