--- a/css/Hardware.scss
+++ b/css/Hardware.scss
@@ -1,6 +1,7 @@
 @import "../css/mixins_variable.scss";
 @import "../css/fonts.scss";
 @import "../css/null.scss";
+@import "../css/header";
 
 .body {
     min-width: $maxWidth;
