--- a/css/Hardware.css
+++ b/css/Hardware.css
@@ -1,43 +1,32 @@
-.__container {
-  max-width: 1270px;
-  padding: 0 15px;
-  margin: 0 auto;
-}
-
+@charset "UTF-8";
 @font-face {
   font-family: "Gilroy";
   font-display: swap;
-  src: url("../fonts/Gilroy-Medium.woff") format("woff"), url("../fonts/Gilroy-Medium.woff2") format("woff2");
+  src: url("../fonts/Gilroy-Medium.ttf");
   font-weight: 500;
   font-style: normal;
 }
 @font-face {
   font-family: "Gilroy";
   font-display: swap;
-  src: url("../fonts/Gilroy-Bold.woff") format("woff"), url("../fonts/Gilroy-Bold.woff2") format("woff2");
+  src: url("../fonts/Gilroy-Bold.ttf");
   font-weight: 700;
   font-style: normal;
 }
 @font-face {
   font-family: "Gilroy";
   font-display: swap;
-  src: url("../fonts/Gilroy-Regular.woff") format("woff"), url("../fonts/Gilroy-Regular.woff2") format("woff2");
+  src: url("../fonts/Gilroy-Regular.ttf");
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
   font-family: "Gilroy";
   font-display: swap;
-  src: url("../fonts/Gilroy-SemiBold.woff") format("woff"), url("../fonts/Gilroy-SemiBold.woff2") format("woff2");
+  src: url("../fonts/Gilroy-SemiBold.ttf");
   font-weight: 600;
   font-style: normal;
 }
-.__container {
-  max-width: 1270px;
-  padding: 0 15px;
-  margin: 0 auto;
-}
-
 * {
   padding: 0px;
   margin: 0px;
@@ -121,8 +110,9 @@ h6 {
 }
 
 .body {
-  min-width: 1440px;
+  min-width: 1440;
   width: 100%;
+  overflow-x: hidden;
   font-family: "Gilroy", sans-serif;
 }
 
@@ -134,7 +124,7 @@ h6 {
 .header__wrapper {
   position: fixed;
   width: 100%;
-  background: linear-gradient(to right, #F9F1E7 82%, white 8%);
+  background: linear-gradient(90deg, #F9F1E7 61%, #FCF8F3 32%);
   top: 0;
   left: 0;
   z-index: 50;
@@ -142,18 +132,33 @@ h6 {
 .header__container {
   display: flex;
   align-items: center;
+  position: relative;
   max-width: 1270px;
+  min-height: 125px;
   width: 100%;
   padding: 0 15px;
   margin: 0 auto;
-  background: linear-gradient(to right, #F9F1E7 61%, #FCF8F3 39%);
+}
+@media (max-width: 991.98px) {
+  .header__container {
+    min-height: 80px;
+  }
+}
+@media (max-width: 767.98px) {
+  .header__container {
+    min-height: 50px;
+  }
 }
 .header__main {
   display: flex;
   margin: auto 0;
   flex: 0 0 39.8387096774%;
-  min-height: 125px;
   align-items: center;
+}
+@media (max-width: 991.98px) {
+  .header__main {
+    flex: 1 1 auto;
+  }
 }
 .header__logo {
   color: #000000;
@@ -161,44 +166,37 @@ h6 {
   font-weight: 700;
   font-size: 120.8333333333%;
   margin-right: 36px;
+  position: relative;
+  z-index: 5;
+}
+@media (max-width: 767.98px) {
+  .header__logo {
+    font-size: 150%;
+  }
 }
 .header__search {
-  height: 37%;
-  width: 448px;
-  background-color: white;
-  margin-right: 114px;
+  max-width: 473px;
 }
-.header__search .search__form-icon {
-  display: none;
-}
-.header__search .search__form-item input {
-  font-size: 14px;
-  line-height: 150%;
-  margin-top: 14px;
-}
-.header__search .search__icon {
-  width: 19px;
-  height: 19px;
-  margin: 14px;
+@media (min-width: 991.98px) {
+  .header__search {
+    flex: 1 1 auto;
+  }
 }
 .header__actions {
   display: flex;
   align-items: center;
+  padding-left: 20px;
+  margin-left: 40px;
 }
-.header__actions .actions-heart {
-  width: 24px;
-  height: 24px;
-  margin-right: 32px;
+@media (max-width: 1270px) {
+  .header__actions {
+    margin-left: calc(0px + 40 * ((100vw - 320px) / 950));
+  }
 }
-.header__actions .actions-cart {
-  width: 24px;
-  height: 24px;
-  margin-right: 32px;
-}
-.header__actions .actions-avatar {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
+@media (max-width: 991.98px) {
+  .header__actions {
+    margin-left: 0;
+  }
 }
 
 .menu {
@@ -207,18 +205,50 @@ h6 {
 .menu__body {
   display: flex;
 }
-@media (min-width: 469.98px) {
+@media (max-width: 767.98px) {
+  .menu__body {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    top: 0;
+    left: -100%;
+    background-color: #fcf8f3;
+    transition: left 0.4s ease 0s;
+    padding: 70px 15px 30px 15px;
+  }
+  .menu__body::before {
+    content: "";
+    position: fixed;
+    width: 100%;
+    height: 50px;
+    top: 0;
+    left: 0;
+    background-color: #fcf8f3;
+    transition: left 0.4s ease 0s;
+    z-index: 2;
+  }
+  .menu__body._active {
+    left: 0;
+  }
+  .menu__body._active::before {
+    left: 0;
+  }
+}
+.menu__body._open {
+  left: 0;
+}
+@media (min-width: 767.98px) {
   .menu__list {
     display: flex;
     justify-content: space-evenly;
     margin-right: 11px;
-    flex-wrap: wrap;
   }
 }
 .menu__item {
   font-weight: 500;
   margin-right: 36px;
-  flex-wrap: wrap;
+  min-width: 95px;
   padding: 5px 0;
   position: relative;
 }
@@ -237,28 +267,55 @@ h6 {
     color: #E89F71;
   }
 }
+@media (min-width: 767.98px) {
+  .menu__item._hover .menu__sub-list {
+    transform: translate(0px, 0px);
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+  }
+  .menu__item._hover .menu__arrow-icon {
+    transform: rotate(-180deg);
+    transition: all 0.4s ease 0s;
+  }
+  .menu__item._hover .menu__arrow, .menu__item._hover .menu__link {
+    color: #E89F71;
+  }
+}
 .menu__link {
-  color: inherit;
+  color: #3A3A3A;
   line-height: 1.5em;
   font-size: 16px;
   font-weight: 500;
   margin-right: 12px;
   transition: color 0.3s ease 0s;
 }
+@media (max-width: 767.98px) {
+  .menu__link {
+    font-size: 24px;
+  }
+}
 .menu__arrow {
-  margin: 0 0 0 8px;
   transition: all 0.3s ease 0s;
 }
 .menu__arrow .menu__arrow-icon {
   margin-top: 5px;
+}
+@media (max-width: 767.98px) {
+  .menu__arrow .menu__arrow-icon {
+    margin-top: 0;
+    min-width: 14px;
+    min-height: 14px;
+  }
 }
 .menu__sub-list {
   position: relative;
   left: 0;
   background-color: #E89F71;
   flex: 1 1 100%;
+  padding: 15px 0 0 10px;
 }
-@media (min-width: 469.98px) {
+@media (min-width: 767.98px) {
   .menu__sub-list {
     opacity: 0;
     visibility: hidden;
@@ -274,6 +331,22 @@ h6 {
     pointer-events: none;
   }
 }
+@media (max-width: 767.98px) {
+  .menu__sub-list {
+    opacity: 0;
+    visibility: hidden;
+    border: 1px solid black;
+    transition: all 0.3s ease 0s;
+    transform: translate(0px, 10px);
+    border-radius: 5px;
+    min-width: 200px;
+    min-height: 150px;
+    position: absolute;
+    left: 120%;
+    top: 35%;
+    pointer-events: none;
+  }
+}
 .menu__sub-item {
   margin: 2px 0 8px 5px;
 }
@@ -284,22 +357,637 @@ h6 {
   color: white;
   line-height: 120%;
 }
+@media (any-hover: hover) {
+  .menu__sub-link:hover {
+    text-decoration: underline;
+  }
+}
 
-.menu-burger {
+.search-form {
+  display: flex;
+  justify-content: end;
+}
+.search-form__item {
+  display: flex;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.72);
+  min-height: 45px;
+  width: 100%;
+}
+@media (max-width: 1270px) {
+  .search-form__item {
+    min-height: calc(30px + 15 * ((100vw - 320px) / 950));
+  }
+}
+@media (max-width: 991.98px) {
+  .search-form__item {
+    box-shadow: 0 0 5px rgba(212, 209, 205, 0.3);
+    position: absolute;
+    min-height: 45px;
+    left: 0;
+    top: -100%;
+    z-index: 6;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.4s ease 0s;
+  }
+}
+.search-form__item._active {
+  opacity: 1;
+  top: 85%;
+  left: 5%;
+  width: 90vw;
+  visibility: visible;
+}
+.search-form input {
+  color: #616161;
+  font-size: 14px;
+  line-height: 150%;
+  min-width: 80%;
+  padding-right: 20px;
+}
+.search-form__btn {
+  min-width: 30px;
+  min-height: 30px;
+}
+@media (max-width: 991.98px) {
+  .search-form__btn-hidden {
+    min-width: 24px;
+    min-height: 24px;
+    background-position: center;
+    background-image: url(../img/icons/search.svg);
+    background-repeat: no-repeat;
+  }
+}
+
+.actions-header {
+  position: relative;
+  z-index: 5;
+  gap: 32px;
+}
+@media (max-width: 1270px) {
+  .actions-header {
+    gap: calc(15px + 17 * ((100vw - 320px) / 950));
+  }
+}
+.actions-header .actions-heart {
+  max-width: 24px;
+  max-height: 24px;
+  color: #262f56;
+  transition: all 0.5s ease 0s;
+}
+@media (any-hover: hover) {
+  .actions-header .actions-heart:hover {
+    background-color: #E89F71;
+    border-radius: 35%;
+  }
+}
+.actions-header .actions-cart {
+  max-width: 24px;
+  max-height: 24px;
+}
+.actions-header .actions-avatar {
+  overflow: hidden;
+  border-radius: 50%;
+  max-width: 40px;
+  max-height: 40px;
+}
+@media (max-width: 1270px) {
+  .actions-header .actions-avatar {
+    max-width: calc(30px + 10 * ((100vw - 320px) / 950));
+  }
+}
+@media (max-width: 1270px) {
+  .actions-header .actions-avatar {
+    max-height: calc(30px + 10 * ((100vw - 320px) / 950));
+  }
+}
+
+.cart-header__icon {
+  transition: all 0.4s ease 0s;
+  position: relative;
+  display: block;
+}
+@media (any-hover: hover) {
+  .cart-header__icon:hover {
+    background-color: #E89F71;
+    border-radius: 30%;
+  }
+}
+.cart-header__icon span {
+  position: absolute;
+  min-width: 15px;
+  min-height: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: -10px;
+  right: -10px;
+  border-radius: 50%;
+  background-color: #E89F71;
+  color: white;
+  font-size: 11px;
+}
+.menu-icon {
   display: none;
+  margin-left: 12px;
+  position: relative;
+}
+@media (max-width: 767.98px) {
+  .menu-icon {
+    z-index: 6;
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 20px;
+    cursor: pointer;
+  }
+  .menu-icon::before, .menu-icon::after {
+    content: "";
+  }
+  .menu-icon::before {
+    top: 0;
+    left: 0;
+    position: absolute;
+    min-height: 4px;
+    min-width: 100%;
+    transition: all 0.3s ease 0s;
+    background-color: #3A3A3A;
+  }
+  .menu-icon::after {
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    min-height: 4px;
+    min-width: 100%;
+    transition: all 0.3s ease 0s;
+    background-color: #3A3A3A;
+  }
+  .menu-icon span {
+    left: 0;
+    position: absolute;
+    min-height: 4px;
+    min-width: 100%;
+    transition: all 0.3s ease 0s;
+    background-color: #3A3A3A;
+    top: 50%;
+    transform: scale(1) translate(0px, -50%);
+  }
+  .menu-icon._open span {
+    display: none;
+  }
+  .menu-icon._open::before {
+    bottom: 75%;
+    transform: rotate(45deg) translate(7px, 50%);
+  }
+  .menu-icon._open::after {
+    top: 75%;
+    transform: rotate(-45deg) translate(9px, -50%);
+  }
 }
 
-.body {
-  min-width: 1440px;
-  width: 100%;
+._footer-title {
+  display: flex;
+  align-items: flex-start;
+  color: #3A3A3A;
+  font-size: 24px;
+  line-height: 120.8333333333%;
+  font-weight: 700;
+}
+@media (max-width: 1270px) {
+  ._footer-title {
+    font-size: calc(20px + 4 * ((100vw - 320px) / 950));
+  }
 }
 
-.header__container {
-  max-width: 1440px;
-  width: 100%;
+.footer__wrapper {
+  max-width: 100vw;
+}
+.footer__container {
+  max-width: 1270px;
   padding: 0 15px;
   margin: 0 auto;
 }
-.menu-burger {
-  display: none;
+.footer__body {
+  border-top: 1px solid #d8d8d8;
+  display: grid;
+  grid-template-columns: 250px 1fr 290px;
+  padding-top: 80px;
+  padding-bottom: 60px;
+  -moz-column-gap: 80px;
+       column-gap: 80px;
+}
+@media (max-width: 1270px) {
+  .footer__body {
+    padding-top: calc(30px + 50 * ((100vw - 320px) / 950));
+  }
+}
+@media (max-width: 1270px) {
+  .footer__body {
+    padding-bottom: calc(30px + 30 * ((100vw - 320px) / 950));
+  }
+}
+@media (max-width: 1270px) {
+  .footer__body {
+    -moz-column-gap: calc(0px + 80 * ((100vw - 320px) / 950));
+         column-gap: calc(0px + 80 * ((100vw - 320px) / 950));
+  }
+}
+@media (max-width: 1199.98px) {
+  .footer__body {
+    grid-template-rows: auto auto;
+    grid-template-columns: 1fr 290px;
+  }
+}
+@media (max-width: 991.98px) {
+  .footer__body {
+    display: block;
+  }
+}
+.footer__main {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+@media (max-width: 1199.98px) {
+  .footer__main {
+    grid-column: span 2;
+    margin-bottom: 40px;
+  }
+}
+@media (max-width: 1199.98px) and (max-width: 1270px) {
+  .footer__main {
+    margin-bottom: calc(30px + 10 * ((100vw - 320px) / 950));
+  }
+}
+.footer__logo {
+  margin-bottom: 0.6666666667em;
+}
+.footer__text {
+  color: #898989;
+  line-height: 150%;
+}
+.footer__text:not(:last-child) {
+  margin-bottom: 1em;
+}
+@media (max-width: 991.98px) {
+  .footer__menu {
+    margin-bottom: 40px;
+  }
+}
+@media (max-width: 991.98px) and (max-width: 1270px) {
+  .footer__menu {
+    margin-bottom: calc(30px + 10 * ((100vw - 320px) / 950));
+  }
+}
+.contacts-footer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.contacts__footer-location {
+  display: inline-flex;
+  align-items: flex-start;
+  color: #898989;
+  transition: all 0.4s ease 0s;
+  margin-bottom: 16px;
+}
+@media (max-width: 1270px) {
+  .contacts__footer-location {
+    margin-bottom: calc(10px + 6 * ((100vw - 320px) / 950));
+  }
+}
+.contacts__footer-location a {
+  color: #898989;
+  line-height: 150%;
+  margin-left: 10px;
+}
+@media (any-hover: hover) {
+  .contacts__footer-location a:hover {
+    color: #E89F71;
+  }
+}
+.contacts__footer-phone {
+  display: inline-flex;
+  align-items: flex-start;
+  color: #898989;
+  transition: all 0.4s ease 0s;
+  margin-bottom: 16px;
+}
+@media (max-width: 1270px) {
+  .contacts__footer-phone {
+    margin-bottom: calc(10px + 6 * ((100vw - 320px) / 950));
+  }
+}
+.contacts__footer-phone a {
+  color: #898989;
+  line-height: 150%;
+  margin-left: 10px;
+}
+@media (any-hover: hover) {
+  .contacts__footer-phone a:hover {
+    color: #E89F71;
+  }
+}
+.contacts__footer-email {
+  display: inline-flex;
+  align-items: flex-start;
+  transition: all 0.4s ease 0s;
+}
+.contacts__footer-email a {
+  color: #898989;
+  line-height: 150%;
+}
+@media (any-hover: hover) {
+  .contacts__footer-email a:hover {
+    color: #E89F71;
+  }
+}
+
+@media (min-width: 767.98px) {
+  .menu-footer {
+    display: flex;
+  }
+}
+.menu-footer__column {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  position: relative;
+}
+@media (min-width: 767.98px) {
+  .menu-footer__column {
+    display: flex;
+    flex: 0 1 33.333%;
+  }
+}
+.menu-footer__title {
+  cursor: default;
+  margin-bottom: 0.625em;
+  white-space: nowrap;
+  position: relative;
+  transition: all 0.4s ease 0s;
+}
+@media (max-width: 767.98px) {
+  .menu-footer__title {
+    cursor: pointer;
+  }
+  .menu-footer__title::after {
+    content: "‹";
+    position: absolute;
+    top: -3px;
+    left: 200px;
+    font-size: 45px;
+    transition: all 0.4s ease 0s;
+    transform: rotate(-90deg);
+  }
+}
+@media (max-width: 767.98px) and (max-width: 1270px) {
+  .menu-footer__title::after {
+    font-size: calc(30px + 15 * ((100vw - 320px) / 950));
+  }
+}
+@media (max-width: 767.98px) and (any-hover: hover) {
+  .menu-footer__title:hover {
+    color: #E89F71;
+  }
+}
+.menu-footer__title._open::after {
+  transform: rotate(-180deg);
+}
+.menu-footer__list {
+  transition: all 0.4s ease 0s;
+}
+.menu-footer__list li:not(:last-child) {
+  margin-bottom: 15px;
+}
+@media (max-width: 767.98px) {
+  .menu-footer__list {
+    opacity: 0;
+    visibility: hidden;
+    transform: translate(100%, 0px);
+    position: absolute;
+  }
+  .menu-footer__list li:last-child {
+    margin-bottom: 10px;
+  }
+}
+.menu-footer__list._open {
+  opacity: 1;
+  visibility: visible;
+  transition: all 0.4s ease 0s;
+  transform: translate(0px, 0px);
+  position: relative;
+}
+.menu-footer__link {
+  color: #616161;
+  transition: all 0.4s ease 0s;
+  line-height: 120%;
+  font-weight: 500;
+}
+@media (any-hover: hover) {
+  .menu-footer__link:hover {
+    color: #E89F71;
+  }
+}
+
+.subscribe__title {
+  margin-bottom: 0.625em;
+}
+.subscribe__form {
+  display: flex;
+  justify-content: space-between;
+}
+.subscribe__button {
+  justify-content: flex-end;
+  flex: 0 0 45px;
+  height: 45px;
+  background-color: #E89F71;
+  transition: all 0.4s ease 0s;
+}
+@media (any-hover: hover) {
+  .subscribe__button:hover {
+    background-color: #be825c;
+  }
+}
+.subscribe__input {
+  padding: 0 12px;
+  flex: 1 1 auto;
+  background-color: #F4F5F7;
+}
+
+.main {
+  background: linear-gradient(90deg, #F9F1E7 61%, #FCF8F3 32%);
+}
+
+.main-slider__wrapper {
+  max-width: 100vw;
+}
+.main-slider__container {
+  position: relative;
+  max-width: 1270px;
+  margin: 0 auto;
+  padding: 0 15px;
+  width: 100vw;
+}
+@media (max-width: 991.98px) {
+  .main-slider__container::before {
+    content: "";
+    background: #f9f1e7;
+    position: absolute;
+    top: 0;
+    right: 376px;
+    height: 100%;
+    width: 100vw;
+  }
+}
+.main-slider__body {
+  padding-top: 140px;
+  position: relative;
+  z-index: 2;
+}
+@media (max-width: 991.98px) {
+  .main-slider__body {
+    padding-top: 80px;
+  }
+}
+@media (max-width: 767.98px) {
+  .main-slider__body {
+    padding-top: 50px;
+  }
+}
+@media (min-width: 991.98px) {
+  .main-slider__body {
+    display: flex;
+  }
+}
+.main-slider__content {
+  flex: 0 0 39.8387096774%;
+}
+.main-slider__slider {
+  flex: 1 1 auto;
+  min-width: 0;
+}
+
+.content-main {
+  position: relative;
+  z-index: 5;
+  padding-left: 15px;
+  padding-right: 15px;
+  background: rgba(255, 255, 255, 0.72);
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media (max-width: 1270px) {
+  .content-main {
+    padding-top: calc(15px + 45 * ((100vw - 320px) / 950));
+  }
+}
+@media (max-width: 1270px) {
+  .content-main {
+    padding-bottom: calc(15px + 45 * ((100vw - 320px) / 950));
+  }
+}
+@media (min-width: 991.98px) {
+  .content-main {
+    padding: 60px;
+  }
+}
+@media (min-width: 991.98px) and (max-width: 1270px) {
+  .content-main {
+    padding: calc(1px + 59 * ((100vw - 320px) / 950));
+  }
+}
+@media (min-width: 991.98px) {
+  @supports ((-webkit-backdrop-filter: blur(31px)) or (backdrop-filter: blur(31px))) {
+    .content-main {
+      background: rgba(255, 255, 255, 0.9);
+      -webkit-backdrop-filter: blur(31px);
+              backdrop-filter: blur(31px);
+    }
+  }
+}
+.content-main__title {
+  font-size: 56px;
+  line-height: 120%;
+  font-weight: 700;
+}
+@media (max-width: 1270px) {
+  .content-main__title {
+    font-size: calc(24px + 32 * ((100vw - 320px) / 950));
+  }
+}
+.content-main__title:not(:last-child) {
+  margin-bottom: 0.2857142857em;
+}
+.content-main__text {
+  font-size: 20px;
+  color: #898989;
+  line-height: 150%;
+  font-weight: 500;
+}
+@media (max-width: 1270px) {
+  .content-main__text {
+    font-size: calc(15px + 5 * ((100vw - 320px) / 950));
+  }
+}
+.content-main__text:not(:last-child) {
+  margin-bottom: 2.3em;
+}
+.content-main__button {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 15px;
+  text-align: center;
+  transition: all 0.4s ease 0s;
+  background-color: #E89F71;
+  color: white;
+  width: 100%;
+  font-weight: 600;
+  min-height: 78px;
+  font-size: 20px;
+}
+@media (max-width: 1270px) {
+  .content-main__button {
+    min-height: calc(45px + 33 * ((100vw - 320px) / 950));
+  }
+}
+@media (max-width: 1270px) {
+  .content-main__button {
+    font-size: calc(16px + 4 * ((100vw - 320px) / 950));
+  }
+}
+@media (any-hover: hover) {
+  .content-main__button:hover {
+    background-color: #c47d51;
+  }
+}
+
+.slider-main__image {
+  text-align: center;
+}
+.slider-main__image img {
+  max-width: 100%;
+}
+.body {
+  min-width: 1440;
+  width: 100%;
+}
+
+.wrapper {
+  position: relative;
+  min-height: 100%;
+}
+
+.main {
+  flex: 1 1 auto;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }/*# sourceMappingURL=Hardware.css.map */
