--- a/css/mixins_variable.css
+++ b/css/mixins_variable.css
@@ -1,5 +1,1 @@
-.__container {
-  max-width: 1270px;
-  padding: 0 15px;
-  margin: 0 auto;
-}/*# sourceMappingURL=mixins_variable.css.map */
+/*# sourceMappingURL=mixins_variable.css.map */
