--- a/css/mixins_variable.scss
+++ b/css/mixins_variable.scss
@@ -6,14 +6,15 @@ $pink_main: #F9F1E7;
 $pink_light: #FCF8F3;
 $font_color_main: #3A3A3A;
 
-$maxWidth: 1440px;
-$maxWidthContainer: 1270px;
+$maxWidth: 1440;
+$maxWidthContainer: 1270;
 $fontFamily: "Gilroy";
 
 //медиазапросы
-$mq1: 991.98px;
-$mq2: 767.98px;
-$mq3: 469.98px;
+$mq1: 1199.98px;
+$mq2: 991.98px;
+$mq3: 767.98px;
+$mq4: 469.98px;
 
 //Размер шрифтов
 $gil_400: 400;
@@ -25,14 +26,29 @@ $gil_500: 500;
 	@font-face {
 		font-family: $font_name;
 		font-display: swap;
-		src: url("../fonts/#{$file_name}.woff") format("woff"), url("../fonts/#{$file_name}.woff2") format("woff2");
+		src: url("../fonts/#{$file_name}.ttf");
 		font-weight: #{$weight};
 		font-style: #{$style};
 	}
 }
 
-.__container {
-	max-width: $maxWidthContainer;
-	padding: 0 15px;
-	margin: 0 auto;
+@mixin adaptiv-value($property, $startSize, $minSize, $type) {
+	$addSize: $startSize - $minSize;
+	@if $type==1 {
+		//Только если меньше контейнера
+		#{$property}: $startSize + px;
+		@media (max-width: #{$maxWidthContainer + px}) {
+			#{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidthContainer - 320}));
+		}
+	} @else if $type==2 {
+		//Только если больше контейнера
+		#{$property}: $startSize + px;
+		@media (min-width: #{$maxWidthContainer + px}) {
+			#{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}));
+		}
+	} @else {
+		//Всегда
+		#{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}));
+	}
 }
+
