--- a/css/_header.scss
+++ b/css/_header.scss
@@ -8,6 +8,21 @@
 		position: absolute;
 		top: 0;
 		left: 0;
+		min-height: 40px;
+		@media (max-width: $mq3) {
+			min-height: 5px;
+		}
+		&._scroll {
+			.header__wrapper {
+				background: rgba(255, 255, 255, 0.8);
+			}
+			.header__container {
+				min-height: 50px;
+				@media (min-width: $mq2) {
+					min-height: 70px;
+				}
+			}
+		}
 
 		&__wrapper {
 			position: fixed;
@@ -16,6 +31,7 @@
 			top: 0;
 			left: 0;
 			z-index: 50;
+			transition: all 0.4s ease 0s;
 			
 		}
 
@@ -23,11 +39,13 @@
 			display: flex;
 			align-items: center;
 			position: relative;
+			justify-content: space-between;
             max-width: $maxWidthContainer + px;
 			min-height: 125px;
             width: 100%;
             padding: 0 15px;
             margin: 0 auto;
+			transition: all 0.4s ease 0s;
 			
 			
 			@media (max-width: $mq2) {
@@ -99,7 +117,7 @@
 			@media (max-width: $mq3) {
 				position: fixed;
 				width: 100%;
-				height: 100%;
+				height: 300px;
 				overflow: auto;
 				top: 0;
 				left: -100%;
