--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,10 @@
 .main {
-  background: linear-gradient(90deg, #F9F1E7 61%, #FCF8F3 32%);
+  min-height: 100%;
 }
 
+.main-slider {
+  background: linear-gradient(90deg, #F9F1E7 61%, #FCF8F3 32%);
+}
 .main-slider__wrapper {
   max-width: 100vw;
 }
@@ -25,6 +28,7 @@
 }
 .main-slider__body {
   padding-top: 140px;
+  height: 100%;
   position: relative;
   z-index: 2;
 }
@@ -49,11 +53,18 @@
 .main-slider__slider {
   flex: 1 1 auto;
   min-width: 0;
+  padding-left: 32px;
+}
+@media (max-width: 1270px) {
+  .main-slider__slider {
+    padding-left: calc(15px + 17 * ((100vw - 320px) / 950));
+  }
 }
 
 .content-main {
   position: relative;
   z-index: 5;
+  max-height: 560px;
   padding-left: 15px;
   padding-right: 15px;
   background: rgba(255, 255, 255, 0.72);
@@ -146,12 +157,201 @@
   }
 }
 
+@media (max-width: 767.98px) {
+  .slider-main {
+    display: none;
+  }
+}
+.slider-main__controls {
+  padding-bottom: 25px;
+}
+@media (max-width: 991.98px) {
+  .slider-main__controls {
+    padding-top: 30px;
+  }
+}
+@media (max-width: 991.98px) and (max-width: 1270px) {
+  .slider-main__controls {
+    padding-top: calc(15px + 15 * ((100vw - 320px) / 950));
+  }
+}
+.slider-main__wrapper {
+  overflow: visible;
+}
+@media (min-width: 991.98px) {
+  .slider-main__wrapper {
+    width: 934px;
+  }
+}
+@media (min-width: 991.98px) and (max-width: 1270px) {
+  .slider-main__wrapper {
+    width: calc(290px + 644 * ((100vw - 320px) / 950));
+  }
+}
+.slider-main__container {
+  min-width: 2670px;
+}
+@media (max-width: 991.98px) {
+  .slider-main__container {
+    transform: translate(120px);
+  }
+}
+.slider-main__track {
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  left: -1065px;
+  transition: all 0.8s ease 0s;
+}
+.slider-main__slide {
+  min-width: 900px;
+  margin: 0 15px;
+  position: relative;
+  left: 0;
+  transition: all 0.8s ease 0s;
+}
 .slider-main__image {
+  display: flex;
+  flex-direction: row;
   text-align: center;
 }
 .slider-main__image img {
   max-width: 100%;
+  margin: 0 15px;
 }
+.slider-main__content {
+  min-width: 295px;
+  max-height: 300px;
+  overflow: auto;
+  position: absolute;
+  color: inherit;
+  display: flex;
+  flex-direction: column;
+  padding: 24px;
+  background: rgba(255, 255, 255, 0.9);
+}
+@media (max-width: 1270px) {
+  .slider-main__content {
+    padding: calc(15px + 9 * ((100vw - 320px) / 950));
+  }
+}
+@media (min-width: 767.98px) {
+  .slider-main__content {
+    position: absolute;
+    min-width: 350px;
+    right: 40px;
+    bottom: 40px;
+  }
+}
+@media (min-width: 767.98px) and (max-width: 1270px) {
+  .slider-main__content {
+    right: calc(0px + 40 * ((100vw - 320px) / 950));
+  }
+}
+@media (min-width: 767.98px) and (max-width: 1270px) {
+  .slider-main__content {
+    bottom: calc(0px + 40 * ((100vw - 320px) / 950));
+  }
+}
+@media (max-width: 1199.98px) {
+  .slider-main__content {
+    right: 225px;
+  }
+}
+.slider-main__title {
+  font-size: 28px;
+  font-weight: 600;
+  line-height: 120%;
+  margin: 0 0 0.1428571429em 0;
+}
+@media (max-width: 1270px) {
+  .slider-main__title {
+    font-size: calc(22px + 6 * ((100vw - 320px) / 950));
+  }
+}
+.slider-main__text {
+  line-height: 150%;
+  color: #898989;
+  margin: 0 0 0.5em 0;
+}
+.slider-main__price {
+  display: flex;
+  flex-direction: row-reverse;
+  line-height: 150%;
+  align-items: center;
+  font-weight: 600;
+  justify-content: start;
+  font-size: 20px;
+}
+@media (max-width: 1270px) {
+  .slider-main__price {
+    font-size: calc(14px + 6 * ((100vw - 320px) / 950));
+  }
+}
+.slider-main__price::before {
+  position: absolute;
+  right: 10%;
+  font-size: 16px;
+  color: black;
+}
+
+.controls-slider-main {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.controls-slider-main__dots {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.dots__item {
+  cursor: pointer;
+  border-radius: 50%;
+  color: #616161;
+  flex: 0 0 27px;
+  height: 27px;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.4s ease 0s;
+  margin: 1px 1px;
+}
+.dots__item:not(:last-child) {
+  margin-right: 12px;
+}
+.dots__item::after {
+  display: block;
+  position: absolute;
+  content: "";
+  top: 30%;
+  left: 30%;
+  width: 11px;
+  height: 11px;
+  background-color: #d8d8d8;
+  border-radius: 50%;
+  transition: all 0.4s ease 0s;
+}
+.dots__item::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border: 1px solid #E89F71;
+  transition: transform 0.4s ease 0s;
+  transform: scale(0);
+}
+.dots__item._active::after {
+  background-color: #E89F71;
+}
+.dots__item._active::before {
+  transform: scale(1);
+}
+
 .slider-arrows {
   display: grid;
   grid-template-columns: repeat(2, 48px);
@@ -161,14 +361,13 @@
 .slider-arrow {
   border-radius: 50%;
   height: 48px;
-  background-color: rgba(252, 159, 113, 0.3);
+  background-color: rgba(232, 159, 113, 0.3);
   transition: all 0.4s ease 0s;
+  box-shadow: 0, 0, 0, 0.16;
 }
 .slider-arrow_prev {
   cursor: pointer;
-}
-.slider-arrow_prev img {
-  transform: rotate(180deg);
+  color: #E89F71;
 }
 @media (any-hover: hover) {
   .slider-arrow_prev:hover {
@@ -176,14 +375,95 @@
   }
 }
 .slider-arrow_prev::before {
-  color: red;
   font-size: 20px;
+  font-weight: 600;
+  color: #E89F71;
+}
+.slider-arrow_prev:disabled {
+  background-color: #fff;
 }
 .slider-arrow_next {
   cursor: pointer;
-  width: 200px;
+}
+@media (any-hover: hover) {
+  .slider-arrow_next:hover {
+    background-color: rgba(252, 159, 113, 0.3);
+  }
 }
 .slider-arrow_next::before {
-  color: red;
   font-size: 20px;
+  font-weight: 600;
+  color: #E89F71;
+}
+.slider-arrow_next:disabled {
+  background-color: #fff;
+}
+
+.advantages {
+  padding-top: 88px;
+  padding-bottom: 88px;
+}
+@media (max-width: 1270px) {
+  .advantages {
+    padding-top: calc(30px + 58 * ((100vw - 320px) / 950));
+  }
+}
+@media (max-width: 1270px) {
+  .advantages {
+    padding-bottom: calc(30px + 58 * ((100vw - 320px) / 950));
+  }
+}
+.advantages__wrapper {
+  width: 100vw;
+}
+.advantages__container {
+  max-width: 1270px;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+@media (max-width: 767.98px) {
+  .advantages__container {
+    padding-left: 15px;
+  }
+}
+.advantages__item {
+  display: inline-grid;
+  padding: 15px 0;
+  grid-template: auto auto/85px 1fr;
+}
+.advantages__item:nth-last-child(n) {
+  padding-right: 15px;
+}
+@media (max-width: 991.98px) {
+  .advantages__item {
+    min-width: 280px;
+  }
+}
+@media (max-width: 767.98px) {
+  .advantages__item {
+    grid-template: auto auto/auto 1fr;
+  }
+}
+.advantages__icon {
+  text-align: center;
+  align-self: center;
+  grid-row: span 2;
+}
+@media (max-width: 767.98px) {
+  .advantages__icon {
+    padding-right: 15px;
+  }
+}
+.advantages__title {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 150%;
+  margin-bottom: 0.1111111111em;
+}
+.advantages__text {
+  line-height: 150%;
+  color: #898989;
 }/*# sourceMappingURL=main.css.map */
